add nghia's census csv and notebook

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "[763 rows x 19 columns]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,6 +379,7 @@
     "death = pd.read_csv(\"sars_deaths.csv\")\n",
     "hospitalization = pd.read_csv(\"sars_hospitalizations.csv\")\n",
     "census = pd.read_csv(\"Census_Wash_Counties_Income_Poverty.csv\")\n",
+    "political = pd.read_csv(\"sars_political_leaning_nghia.csv\")\n",
     "\n",
     "cleandata = pd.DataFrame.copy(data)\n",
     "\n",
@@ -393,8 +394,6 @@
     "cleandata[\"WeekStartDate\"] = year + \"-\" + month + \"-\" + day\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "dataframes = [cleandata, death, hospitalization]\n",
     "\n",
     "#mergedf = reduce(lambda  left,right: pd.merge(left,right,on=['County', \"WeekStartDate\"], suffixes= (\"_cases\", \"_death\", \"_hospitalization\"), how='outer'), dataframes)\n",
@@ -406,6 +405,15 @@
     "#mergedf = pd.merge(mergedf, hospitalization, on \"County\"), suffixes = (\"\", \"_hospitalization\", how = \"outer\", indicator = True)\n",
     "\n",
     "mergedf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mergedf[mergedf[\"_merge\"] == \"right_only\"]"
    ]
   },
   {
