--- a/merge.ipynb
+++ b/merge.ipynb
@@ -460,7 +460,7 @@
     "\n",
     "#mergedf.fillna(0)\n",
     "\n",
-    "mergedf2.to_csv(\"test.csv\")\n",
+    "mergedf2.to_csv(\"MergeWeek.csv\")\n",
     "mergedf2"
    ]
   },
@@ -950,13 +950,27 @@
     "       'Age 40-59_hospitalization', 'Age 60-79_hospitalization',\n",
     "       'Age 80+_hospitalization', 'Positive UnkAge_hospitalization',\n",
     "       'dtm_updated_hospitalization']].sum()\n",
-    "\n",
-    "mergemonth"
+    "mergemonth.to_csv(\"MergeMonth.csv\")\n",
+    "mergemonth\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census = pd.read_csv(\"census_politics_merge_mike2.csv\")\n",
+    "\n",
+    "mergedf4 = mergemonth.reset_index()\n",
+    "mergedf5 = pd.merge(mergedf4, census, on = \"County\", how=\"outer\")\n",
+    "mergedf5 = mergedf5.drop(columns=['Counter'])\n",
+    "mergedf5.to_csv(\"Final Merge 7_15_20\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1092,7 @@
        "4          1        0                0  7/5/2020 15:36  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1225,7 @@
        "4          5        3                0  2020/07/05 15:36:42  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1379,7 @@
        "4                                0         2020/07/05 15:36:42  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1400,293 +1414,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>GEO_ID</th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>DP03_0001E</th>\n",
-       "      <th>DP03_0001M</th>\n",
-       "      <th>DP03_0001PE</th>\n",
-       "      <th>DP03_0001PM</th>\n",
-       "      <th>DP03_0002E</th>\n",
-       "      <th>DP03_0002M</th>\n",
-       "      <th>DP03_0002PE</th>\n",
-       "      <th>DP03_0002PM</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DP03_0135PE</th>\n",
-       "      <th>DP03_0135PM</th>\n",
-       "      <th>DP03_0136E</th>\n",
-       "      <th>DP03_0136M</th>\n",
-       "      <th>DP03_0136PE</th>\n",
-       "      <th>DP03_0136PM</th>\n",
-       "      <th>DP03_0137E</th>\n",
-       "      <th>DP03_0137M</th>\n",
-       "      <th>DP03_0137PE</th>\n",
-       "      <th>DP03_0137PM</th>\n",
+       "      <th>Counter</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Political_Party</th>\n",
+       "      <th>Percent Below Poverty Level</th>\n",
+       "      <th>Household Income Median</th>\n",
+       "      <th>Household Income Mean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>id</td>\n",
-       "      <td>Geographic Area Name</td>\n",
-       "      <td>Estimate!!EMPLOYMENT STATUS!!Population 16 yea...</td>\n",
-       "      <td>Margin of Error!!EMPLOYMENT STATUS!!Population...</td>\n",
-       "      <td>Percent Estimate!!EMPLOYMENT STATUS!!Populatio...</td>\n",
-       "      <td>Percent Margin of Error!!EMPLOYMENT STATUS!!Po...</td>\n",
-       "      <td>Estimate!!EMPLOYMENT STATUS!!Population 16 yea...</td>\n",
-       "      <td>Margin of Error!!EMPLOYMENT STATUS!!Population...</td>\n",
-       "      <td>Percent Estimate!!EMPLOYMENT STATUS!!Populatio...</td>\n",
-       "      <td>Percent Margin of Error!!EMPLOYMENT STATUS!!Po...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Percent Estimate!!PERCENTAGE OF FAMILIES AND P...</td>\n",
-       "      <td>Percent Margin of Error!!PERCENTAGE OF FAMILIE...</td>\n",
-       "      <td>Estimate!!PERCENTAGE OF FAMILIES AND PEOPLE WH...</td>\n",
-       "      <td>Margin of Error!!PERCENTAGE OF FAMILIES AND PE...</td>\n",
-       "      <td>Percent Estimate!!PERCENTAGE OF FAMILIES AND P...</td>\n",
-       "      <td>Percent Margin of Error!!PERCENTAGE OF FAMILIE...</td>\n",
-       "      <td>Estimate!!PERCENTAGE OF FAMILIES AND PEOPLE WH...</td>\n",
-       "      <td>Margin of Error!!PERCENTAGE OF FAMILIES AND PE...</td>\n",
-       "      <td>Percent Estimate!!PERCENTAGE OF FAMILIES AND P...</td>\n",
-       "      <td>Percent Margin of Error!!PERCENTAGE OF FAMILIE...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Adams County</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>25.2</td>\n",
+       "      <td>49142</td>\n",
+       "      <td>61370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0500000US53011</td>\n",
-       "      <td>Clark County, Washington</td>\n",
-       "      <td>380248</td>\n",
-       "      <td>1154</td>\n",
-       "      <td>380248</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>247061</td>\n",
-       "      <td>3303</td>\n",
-       "      <td>65</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>21.3</td>\n",
-       "      <td>2.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Asotin County</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>50423</td>\n",
+       "      <td>65079</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0500000US53015</td>\n",
-       "      <td>Cowlitz County, Washington</td>\n",
-       "      <td>86221</td>\n",
-       "      <td>563</td>\n",
-       "      <td>86221</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>50611</td>\n",
-       "      <td>2397</td>\n",
-       "      <td>58.7</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>20.8</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Benton County</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>65650</td>\n",
+       "      <td>83941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0500000US53041</td>\n",
-       "      <td>Lewis County, Washington</td>\n",
-       "      <td>64562</td>\n",
-       "      <td>576</td>\n",
-       "      <td>64562</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>34306</td>\n",
-       "      <td>1531</td>\n",
-       "      <td>53.1</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>25.5</td>\n",
-       "      <td>5.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Chelan County</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>56135</td>\n",
+       "      <td>75117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0500000US53045</td>\n",
-       "      <td>Mason County, Washington</td>\n",
-       "      <td>54199</td>\n",
-       "      <td>413</td>\n",
-       "      <td>54199</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>28311</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>52.2</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>(X)</td>\n",
-       "      <td>19.3</td>\n",
-       "      <td>6.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Clallam County</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>49913</td>\n",
+       "      <td>65858</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 550 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           GEO_ID                        NAME  \\\n",
-       "0              id        Geographic Area Name   \n",
-       "1  0500000US53011    Clark County, Washington   \n",
-       "2  0500000US53015  Cowlitz County, Washington   \n",
-       "3  0500000US53041    Lewis County, Washington   \n",
-       "4  0500000US53045    Mason County, Washington   \n",
+       "   Counter          County Political_Party  Percent Below Poverty Level  \\\n",
+       "0        1    Adams County      Republican                         25.2   \n",
+       "1        2   Asotin County      Republican                         13.0   \n",
+       "2        3   Benton County      Republican                         12.8   \n",
+       "3        4   Chelan County      Republican                         11.6   \n",
+       "4        5  Clallam County      Democratic                         15.9   \n",
        "\n",
-       "                                          DP03_0001E  \\\n",
-       "0  Estimate!!EMPLOYMENT STATUS!!Population 16 yea...   \n",
-       "1                                             380248   \n",
-       "2                                              86221   \n",
-       "3                                              64562   \n",
-       "4                                              54199   \n",
-       "\n",
-       "                                          DP03_0001M  \\\n",
-       "0  Margin of Error!!EMPLOYMENT STATUS!!Population...   \n",
-       "1                                               1154   \n",
-       "2                                                563   \n",
-       "3                                                576   \n",
-       "4                                                413   \n",
-       "\n",
-       "                                         DP03_0001PE  \\\n",
-       "0  Percent Estimate!!EMPLOYMENT STATUS!!Populatio...   \n",
-       "1                                             380248   \n",
-       "2                                              86221   \n",
-       "3                                              64562   \n",
-       "4                                              54199   \n",
-       "\n",
-       "                                         DP03_0001PM  \\\n",
-       "0  Percent Margin of Error!!EMPLOYMENT STATUS!!Po...   \n",
-       "1                                                (X)   \n",
-       "2                                                (X)   \n",
-       "3                                                (X)   \n",
-       "4                                                (X)   \n",
-       "\n",
-       "                                          DP03_0002E  \\\n",
-       "0  Estimate!!EMPLOYMENT STATUS!!Population 16 yea...   \n",
-       "1                                             247061   \n",
-       "2                                              50611   \n",
-       "3                                              34306   \n",
-       "4                                              28311   \n",
-       "\n",
-       "                                          DP03_0002M  \\\n",
-       "0  Margin of Error!!EMPLOYMENT STATUS!!Population...   \n",
-       "1                                               3303   \n",
-       "2                                               2397   \n",
-       "3                                               1531   \n",
-       "4                                               2018   \n",
-       "\n",
-       "                                         DP03_0002PE  \\\n",
-       "0  Percent Estimate!!EMPLOYMENT STATUS!!Populatio...   \n",
-       "1                                                 65   \n",
-       "2                                               58.7   \n",
-       "3                                               53.1   \n",
-       "4                                               52.2   \n",
-       "\n",
-       "                                         DP03_0002PM  ...  \\\n",
-       "0  Percent Margin of Error!!EMPLOYMENT STATUS!!Po...  ...   \n",
-       "1                                                0.9  ...   \n",
-       "2                                                2.7  ...   \n",
-       "3                                                2.4  ...   \n",
-       "4                                                3.8  ...   \n",
-       "\n",
-       "                                         DP03_0135PE  \\\n",
-       "0  Percent Estimate!!PERCENTAGE OF FAMILIES AND P...   \n",
-       "1                                                6.7   \n",
-       "2                                                5.5   \n",
-       "3                                                  7   \n",
-       "4                                                6.6   \n",
-       "\n",
-       "                                         DP03_0135PM  \\\n",
-       "0  Percent Margin of Error!!PERCENTAGE OF FAMILIE...   \n",
-       "1                                                1.8   \n",
-       "2                                                2.5   \n",
-       "3                                                2.4   \n",
-       "4                                                3.4   \n",
-       "\n",
-       "                                          DP03_0136E  \\\n",
-       "0  Estimate!!PERCENTAGE OF FAMILIES AND PEOPLE WH...   \n",
-       "1                                                (X)   \n",
-       "2                                                (X)   \n",
-       "3                                                (X)   \n",
-       "4                                                (X)   \n",
-       "\n",
-       "                                          DP03_0136M  \\\n",
-       "0  Margin of Error!!PERCENTAGE OF FAMILIES AND PE...   \n",
-       "1                                                (X)   \n",
-       "2                                                (X)   \n",
-       "3                                                (X)   \n",
-       "4                                                (X)   \n",
-       "\n",
-       "                                         DP03_0136PE  \\\n",
-       "0  Percent Estimate!!PERCENTAGE OF FAMILIES AND P...   \n",
-       "1                                                5.9   \n",
-       "2                                                8.6   \n",
-       "3                                                7.4   \n",
-       "4                                               11.8   \n",
-       "\n",
-       "                                         DP03_0136PM  \\\n",
-       "0  Percent Margin of Error!!PERCENTAGE OF FAMILIE...   \n",
-       "1                                                1.2   \n",
-       "2                                                2.7   \n",
-       "3                                                2.7   \n",
-       "4                                                3.9   \n",
-       "\n",
-       "                                          DP03_0137E  \\\n",
-       "0  Estimate!!PERCENTAGE OF FAMILIES AND PEOPLE WH...   \n",
-       "1                                                (X)   \n",
-       "2                                                (X)   \n",
-       "3                                                (X)   \n",
-       "4                                                (X)   \n",
-       "\n",
-       "                                          DP03_0137M  \\\n",
-       "0  Margin of Error!!PERCENTAGE OF FAMILIES AND PE...   \n",
-       "1                                                (X)   \n",
-       "2                                                (X)   \n",
-       "3                                                (X)   \n",
-       "4                                                (X)   \n",
-       "\n",
-       "                                         DP03_0137PE  \\\n",
-       "0  Percent Estimate!!PERCENTAGE OF FAMILIES AND P...   \n",
-       "1                                               21.3   \n",
-       "2                                               20.8   \n",
-       "3                                               25.5   \n",
-       "4                                               19.3   \n",
-       "\n",
-       "                                         DP03_0137PM  \n",
-       "0  Percent Margin of Error!!PERCENTAGE OF FAMILIE...  \n",
-       "1                                                2.2  \n",
-       "2                                                4.5  \n",
-       "3                                                5.8  \n",
-       "4                                                6.1  \n",
-       "\n",
-       "[5 rows x 550 columns]"
+       "   Household Income Median  Household Income Mean  \n",
+       "0                    49142                  61370  \n",
+       "1                    50423                  65079  \n",
+       "2                    65650                  83941  \n",
+       "3                    56135                  75117  \n",
+       "4                    49913                  65858  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
