--- a/state_map_v2.ipynb
+++ b/state_map_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +102,7 @@
     "    'County',\n",
     "    'Political_Party',\n",
     "    'Household Income Mean',\n",
+    "    'Percent Below Poverty Level',\n",
     "    'fips',\n",
     "    'NewPos_All',\n",
     "    'Deaths',\n",
@@ -117,6 +118,7 @@
     "    'County',\n",
     "    'Political_Party',\n",
     "    'Household Income Mean',\n",
+    "    'Percent Below Poverty Level',\n",
     "    'fips',\n",
     "    'Cases',\n",
     "    'Deaths',\n",
@@ -126,12 +128,13 @@
     "    'Deaths per 100k',\n",
     "    'Hoptializations per 100k',\n",
     "    'Population Density'\n",
-    "]"
+    "]\n",
+    "#by_county.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,17 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def state_map_summary(metric, color1, color2):\n",
+    "def state_map_summary(metric, color1, color2, color3):\n",
     "    fig = px.choropleth_mapbox(\n",
     "        by_county,\n",
     "        geojson=counties, \n",
     "        locations='fips', \n",
     "        color=f'{metric}',\n",
-    "        color_continuous_scale=[f'{color1}', f'{color2}'],\n",
+    "        color_continuous_scale=[f'{color1}', f'{color2}', f'{color3}'],\n",
     "        mapbox_style='carto-positron',\n",
     "        zoom=5.25,\n",
     "        center= {\"lat\": wash_lat, \"lon\": wash_lon},\n",
@@ -202,46 +205,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#overview of Washington slide\n",
-    "#cases\n",
-    "state_map_summary('Cases per 100k','#E6EE9C','#9E9D24')\n",
-    "state_map_summary('Population','white','#0000FF')"
+    "state_map_summary('Population','white','green','blue')\n",
+    "state_map_summary('Cases per 100k','yellow','red','purple')\n",
+    "state_map_summary('Deaths per 100k','blue','yellow','red')\n",
+    "state_map_summary('Hoptializations per 100k','white','pink','purple')\n",
+    "state_map_summary('Percent Below Poverty Level','yellow','orange','red')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#state_map_summary('Population','#90CAF9','#0D47A1')\n",
-    "#state_map_summary('Cases per 100k','#FFE0B2','#E65100')\n",
-    "#state_map_summary('Deaths per 100k','#FCE4EC','#AD1457')\n",
-    "#state_map_summary('Hoptializations per 100k','#EDE7F6','#4527A0')\n",
-    "state_map_summary('Population Density','#66BB6A','#FFEE58', '#FF7043')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-1-745370eae879>, line 2)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-745370eae879>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    summary,\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
    "source": [
     "fig = px.choropleth_mapbox(\n",
-    "    summary, \n",
+    "    by_county, \n",
     "    geojson=counties, \n",
     "    locations='fips', \n",
     "    color='Political_Party',\n",
@@ -259,7 +241,7 @@
     "    title='Political Affiliation by County'\n",
     ")\n",
     "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
-    "fig"
+    "fig.write_image('map_visuals/politics_map.png')"
    ]
   },
   {
@@ -285,7 +267,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595100175162",
+   "name": "python_defaultSpec_1595137827735",
    "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
   }
  },
