final changes to state map to invert income colors and add code screenshot

--- a/state_map_v2.ipynb
+++ b/state_map_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import plotly.express as px\n",
-    "#create function to generate chorpleth map for Washington colored by a given metric\n",
+    "#create function to generate choropleth map for Washington colored by a given metric\n",
     "def state_map_summary(metric, color1, color2, color3):\n",
     "    fig = px.choropleth_mapbox(\n",
     "        by_county,\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#slide 8: poverty map red to green\n",
     "#median income\n",
-    "state_map_summary('Household Income Median','green','yellow','red')"
+    "state_map_summary('Household Income Median','red','yellow','green')"
    ]
   },
   {
@@ -189,7 +189,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595192189435",
+   "name": "python_defaultSpec_1595291645442",
    "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
   }
  },
