--- a/Regression_Mike/chi_mike.ipynb
+++ b/Regression_Mike/chi_mike.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hospitalizations_hospitalization</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Hospitalization Rate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Political_Party</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Democratic</th>\n",
+       "      <td>3115.0</td>\n",
+       "      <td>5673397.0</td>\n",
+       "      <td>0.000549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Republican</th>\n",
+       "      <td>1227.0</td>\n",
+       "      <td>1941478.0</td>\n",
+       "      <td>0.000632</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Hospitalizations_hospitalization  Population  \\\n",
+       "Political_Party                                                 \n",
+       "Democratic                                 3115.0   5673397.0   \n",
+       "Republican                                 1227.0   1941478.0   \n",
+       "\n",
+       "                 Hospitalization Rate  \n",
+       "Political_Party                        \n",
+       "Democratic                   0.000549  \n",
+       "Republican                   0.000632  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "covid_file = pd.read_csv(\"Final Merge 7_17_20.csv\")\n",
     "covid_chi_gb = covid_file.groupby(\"Political_Party\")\n",
@@ -28,7 +94,8 @@
     "covid_chi1[\"Hospitalization Rate\"] = covid_chi1[\"Hospitalizations_hospitalization\"]/ covid_chi1[\"Population\"] \n",
     "hos_sum = covid_chi1[\"Hospitalizations_hospitalization\"].sum()\n",
     "pop_sum = covid_chi1[\"Population\"].sum()\n",
-    "rate_sum = covid_chi1[\"Hospitalization Rate\"].sum()"
+    "rate_sum = covid_chi1[\"Hospitalization Rate\"].sum()\n",
+    "covid_chi1"
    ]
   },
   {
