--- a/state_map_v2.ipynb
+++ b/state_map_v2.ipynb
@@ -175,6 +175,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
+   "language": "python",
+   "name": "python361064bitpythondataconda992fc1ae3b7c4604b7171c55419ec128"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -185,12 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python_defaultSpec_1595291645442",
-   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
